Termine de Agregar los iconos de las redes sociales

--- a/css/main.css
+++ b/css/main.css
@@ -38,3 +38,7 @@ header .header-icons-container .icons {
     justify-self: end;
     margin-right: 50px;
 }
+header .icons span {
+    color: white;
+    font-size: 30px;
+}
