--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ header {
     height: 140px;
     display: grid;
     grid-template-rows: 1fr 1fr;
+    
 }
 header .header-icons-container {
     width: 100%;
@@ -24,6 +25,7 @@ header .header-icons-container {
     height: 50px;
     display: grid;
     background-color:#47cfac;
+    
 }
 header .header-icons-container .icons {
     width: 300px;
@@ -41,4 +43,51 @@ header .header-icons-container .icons {
 header .icons span {
     color: white;
     font-size: 30px;
+}
+nav {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 90px;
+    
+}
+nav .nav-logo-container {
+    margin-left: 50px;
+    margin-top: -8px;
+    
+}
+nav .nav-logo-container img {
+    width: 100px;
+    margin-top: 10px;
+}
+nav .profile-link {
+   display: flex;
+   align-items: center;
+   justify-content: flex-end;
+   margin-right:50px;
+}
+nav .profile-link a {
+    color:black;
+    border-bottom: 1px solid black;
+}
+
+
+.home-main{ 
+    display:grid;
+    /*ocupa 4 fraciones el boton y texto */
+    grid-template-columns: 1fr 4fr 1fr;
+    height: 100%;
+}
+ .home-main section  {
+    display: grid;
+    grid-column:2;
+    justify-content: center;
+    height: 350px;
+    margin-top: 80px;
+}
+.home-main-text {
+    font-size: 30px;
+    font-weight: 700px;
+    letter-spacing: 10px;
+    color:black;
+    text-align: center;
 }
