--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,10 @@ nav .profile-link a {
     /*ocupa 4 fraciones el boton y texto */
     grid-template-columns: 1fr 4fr 1fr;
     height: 100%;
+    background-image: url('../assets/img/cover.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
  .home-main section  {
     display: grid;
