--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap');
 body {
     margin:0;
     padding:0;
@@ -89,6 +90,7 @@ nav .profile-link a {
     margin-top: 80px;
 }
 .home-main-text {
+    font-family: 'Roboto mono', monospace;
     font-size: 30px;
     font-weight: 700px;
     letter-spacing: 10px;
