--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&family=Roboto+Slab:wght@400;700&family=Roboto:wght@400;500;700;900&display=swap');
 body {
+    font-family: 'Roboto Mono', monospace;
     margin:0;
     padding:0;
     position:fixed;
@@ -82,10 +83,10 @@ nav .profile-link a {
     background-repeat: no-repeat;
     background-size: cover;
 }
- .home-main section  {
+ .home-main section {
     display: grid;
-    grid-column:2;
-    justify-content: center;
+    grid-column: 2;
+    justify-items: center;
     height: 350px;
     margin-top: 80px;
 }
@@ -96,4 +97,64 @@ nav .profile-link a {
     letter-spacing: 10px;
     color:black;
     text-align: center;
+    color:white;
+}
+.home-main-button {
+    width: 110px;
+    height: 50px;
+    background: #47cfac;
+    display: grid;
+    align-items: center;
+}
+.home-main-button a {
+    font-weight: 700;
+    font-size:18px;
+}
+
+.home-blogs {
+    display: grid;
+    grid-template-columns: 1fr 4fr 1fr;
+    height: 100%;
+}
+
+.home-blogs-text section {
+    display: grid;
+    grid-column: 2;
+    justify-items: center;
+    height: 450px;
+    margin: 80px;
+}
+
+.home-blogs-text p {
+    display: grid;
+    margin: 80px;
+    justify-items: center;
+} 
+.blogs-main {
+    display: grid;
+}
+.blogs-news-container {
+    background-color: #e6e9ed;
+    padding: 0 50px 40px;
+}
+/*tenemos 2 elementos */
+.blogs-main-new {
+    display: grid;
+    grid-template: 2fr 1fr;
+    grid-template-rows:2fr;
+
+}
+/*Contenedor que lleva todo los Blogpost */
+.blogs-news-img-container{
+    grid-column: 1;
+}
+.blogs-news-img-container img {
+
+}
+.blogs-news-info-container {
+    /* Poscion de elementos*/
+    grid-column: 2;
+}
+.blogs-news-info-container p {
+     margin-bottom: 35px;
 }
