--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,11 @@ a {
     left:0;
     right:0;
 }
+.grid-container {
+    max-width: 980px;
+    /* divide el left y el right*/
+    margin: auto;
+}
 header {
     width: 100%;
     height: 140px;
@@ -160,4 +165,41 @@ nav .profile-link a {
 }
 .blogs-news-info-container p {
      margin-bottom: 35px;
+}
+.blogs-posts-container {
+    padding: 0 50px 40px;
+}
+.blogs-post-container h3 {
+    border-bottom: 1px solid #cdd2da;
+    padding-bottom: 20px;
+    text-align: center;
+}
+.blogs-button {
+    border: 1px solid #47cfac;
+    padding: 10px 15px;
+    font-size: 12px;
+}
+.blogs-post-container .post-container {
+   display: inline-block;
+   padding-left: 10px;
+   max-width: 30%;
+   margin-bottom: 50px;
+}
+.blogs-post-container .post-container p {
+   margin-bottom: 35px;
+}
+.blogs-post-container .post-container img {
+    width: 100%;
+}
+footer {
+    width: 100%;
+    height: 80px;
+    background-color: #22272d;
+    border-top: 35px solid #47cfac;
+    text-align: center;
+}
+footer p {
+    color:white;
+    margin-top: 30px;
+
 }
