--- a/css/main.css
+++ b/css/main.css
@@ -221,3 +221,30 @@ footer p {
 .blogpost-main-container section h1 {
     font-size: 35px;
 } 
+/*Contenedor Principal */
+.contact-main-container {
+   width: 100%;
+   min-height: 250px; 
+   background-color:#e6e9ed;
+   /*Alinear texto */
+   text-align: center;
+   /* Efecto texto */
+   padding-bottom: 50px;
+}
+/* Div es Block por defecto, divide el contenedor*/
+.contact-main-container div {
+    display:inline-block;
+    width: 49.5%;
+    height: 100%;
+}
+.contact-main-container div a {
+    border-bottom: 1px solid black;
+    padding-bottom: 5px;
+}
+.contact-main-container .contact-left, .contact-right {
+     text-align: initial;
+     margin-top:  85px;
+}    
+.contact-main-container img {
+    width: 100px;
+}
